[package]
name = "scursor"
version = "0.2.0"
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Secure cursor library with support for read and write transactions"
repository = "https://github.com/stepfunc/scursor"
readme = "README.md"

[lints.rust]
unsafe_code = "forbid"
non_ascii_idents = "deny"
unreachable_pub = "deny"
trivial_casts = "deny"
missing_docs = "deny"
warnings = "deny"
unused = { level = "deny", priority = -1 }
missing_copy_implementations = "deny"

[lints.clippy]



